--- a/style.css
+++ b/style.css
@@ -1,147 +1,157 @@
-* { box-sizing: border-box; }
-@import url('https://fonts.googleapis.com/css?family=Rubik:400,500&display=swap');
+.card {
+  --white: hsl(0, 0%, 0%);
+  --black: hsl(0, 0%, 100%);
+  --paragraph: hsl(0, 0%, 0%);
+  --line: hsl(0, 0%, 72%);
+  --primary: hsl(266, 92%, 58%);
 
+  position: relative;
 
-body {
-  font-family: 'Rubik', sans-serif;
-}
-
-.container {
   display: flex;
-  height: 100vh;
+  flex-direction: column;
+  gap: 1rem;
+
+  padding: 1rem;
+  width: 19rem;
+  background-color: rgb(255, 255, 255);
+  background-image: radial-gradient(
+      at 88% 40%,
+      rgb(121, 121, 124) 0px,
+      transparent 85%
+    ),
+    radial-gradient(at 49% 30%, rgb(255, 255, 255) 0px, transparent 85%),
+    radial-gradient(at 14% 26%, rgb(255, 255, 255) 0px, transparent 85%),
+    radial-gradient(at 0% 64%, hsla(263, 93%, 56%, 1) 0px, transparent 85%),
+    radial-gradient(at 41% 94%, hsla(284, 100%, 84%, 1) 0px, transparent 85%),
+    radial-gradient(at 100% 99%, hsla(306, 100%, 57%, 1) 0px, transparent 85%);
+
+  border-radius: 1rem;
+  box-shadow: 0px -16px 24px 0px rgba(255, 255, 255, 0.25) inset;
 }
 
-.left {
+.card .card__border {
   overflow: hidden;
+  pointer-events: none;
+
+  position: absolute;
+  z-index: -10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: calc(100% + 2px);s
+  height: calc(100% + 2px);
+  background-image: linear-gradient(
+    0deg,
+    hsla(0, 0%, 100%, 0.253) -50%,
+    hsl(0, 0%, 100%) 100%
+  );
+
+  border-radius: 1rem;
+}
+
+.card .card__border::before {
+  content: "";
+  pointer-events: none;
+
+  position: fixed;
+  z-index: 200;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%), rotate(0deg);
+  transform-origin: left;
+
+  width: 200%;
+  height: 10rem;
+  background-image: linear-gradient(
+    0deg,
+    hsl(293, 100%, 31%) 0%,
+    hsl(298, 94%, 32%) 40%,
+    hsl(278, 100%, 50%) 60%,
+    hsl(0, 0%, 100%) 100%
+  );
+
+  animation: rotate 8s linear infinite;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.card .card_title__container .card_title {
+  font-size: 1rem;
+  color: var(--white);
+}
+
+.card .card_title__container .card_paragraph {
+  margin-top: 0.25rem;
+  width: 65%;
+
+  font-size: 0.5rem;
+  color: var(--paragraph);
+}
+
+.card .line {
+  width: 100%;
+  height: 0.1rem;
+  background-color: var(--line);
+
+  border: none;
+}
+
+.card .card__list {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
+  gap: 0.5rem;
+}
+
+.card .card__list .card__list_item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.card .card__list .card__list_item .check {
+  display: flex;
   justify-content: center;
-  animation-name: left;
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  animation-delay: 1s;
+  align-items: center;
+
+  width: 1rem;
+  height: 1rem;
+  background-color: var(--primary);
+
+  border-radius: 50%;
 }
 
-.right {
-  flex: 1;
-  background-color: black;
-  transition: 1s;
-  background-image: url(https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+.card .card__list .card__list_item .check .check_svg {
+  width: 0.75rem;
+  height: 0.75rem;
+
+  fill: var(--black);
 }
 
-
-
-.header > h2 {
-  margin: 0;
-  color: #4f46a5;
+.card .card__list .card__list_item .list_text {
+  font-size: 0.75rem;
+  color: var(--white);
 }
 
-.header > h4 {
-  margin-top: 10px;
-  font-weight: normal;
-  font-size: 15px;
-  color: rgba(0,0,0,.4);
-}
+.card .button {
+  cursor: pointer;
 
-.form {
-  max-width: 80%;
-  display: flex;
-  flex-direction: column;
-}
+  padding: 0.5rem;
+  width: 100%;
+  background-image: linear-gradient(
+    0deg,
+    rgba(94, 58, 238, 1) 0%,
+    rgba(197, 107, 240, 1) 100%
+  );
 
-.form > p {
-  text-align: right;
-}
+  font-size: 0.75rem;
+  color: var(--white);
 
-.form > p > a {
-  color: #000;
-  font-size: 14px;
-}
-
-.form-field {
-  height: 46px;
-  padding: 0 16px;
-  border: 2px solid #ddd;
-  border-radius: 4px;
-  font-family: 'Rubik', sans-serif;
-  outline: 0;
-  transition: .2s;
-  margin-top: 20px;
-}
-
-.form-field:focus {
-  border-color: #0f7ef1;
-}
-
-.form > button {
-  padding: 12px 10px;
   border: 0;
-  background: linear-gradient(to right, #de48b5 0%,#0097ff 100%); 
-  border-radius: 3px;
-  margin-top: 10px;
-  color: #fff;
-  letter-spacing: 1px;
-  font-family: 'Rubik', sans-serif;
-}
-
-.animation {
-  animation-name: move;
-  animation-duration: .4s;
-  animation-fill-mode: both;
-  animation-delay: 2s;
-}
-
-.a1 {
-  animation-delay: 2s;
-}
-
-.a2 {
-  animation-delay: 2.1s;
-}
-
-.a3 {
-  animation-delay: 2.2s;
-}
-
-.a4 {
-  animation-delay: 2.3s;
-}
-
-.a5 {
-  animation-delay: 2.4s;
-}
-
-.a6 {
-  animation-delay: 2.5s;
-}
-
-@keyframes move {
-  0% {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-40px);
-  }
-
-  100% {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-  }
-}
-
-@keyframes left {
-  0% {
-    opacity: 0;
-    width: 0;
-  }
-
-  100% {
-    opacity: 1;
-    padding: 20px 40px;
-    width: 440px;
-  }
+  border-radius: 9999px;
+  box-shadow: inset 0 -2px 25px -4px var(--white);
 }
